Feat: added request approval, list, and show based on user
